# facade

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
examples/baseline/: main.rs
protocol/: Cargo.toml  README.md
protocol/src/: dashboard.rs  lib.rs
src/: control.rs  dsl.rs  lib.rs  router.rs  server.rs  settings.rs
ui/: Cargo.toml  build.rs
ui/src/: lib.rs  live.rs  main.rs  utils.rs
ui/src/widgets/: app.rs  app_bar.rs  bind.rs  blank.rs  button.rs  card.rs  component.rs  container.rs  control.rs  dashboard.rs  dynamic.rs  fixed.rs  footer.rs  icon.rs  layout.rs  list.rs  mod.rs  navigation_drawer.rs  page.rs  panel.rs  row.rs  scene.rs  spinner.rs  welcome.rs  widget.rs
ui/static/: index.html  styles.less
ui/styles/: _reset.scss  _vars.scss  styles.sass  styles.scss
