[package]
name = "rillrate"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
flate2 = "1.0.9"
log = "0.4.6"
tar = "0.4.26"
warp = "0.1.16"

[dependencies.futures]
version = "0.1.28"

[dependencies.futures3]
package = "futures-preview"
version = "=0.3.0-alpha.16"
features = ["async-await", "nightly", "compat"]

[build-dependencies]
failure = "0.1.5"
