[package]
name = "rillrate"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
headers = "0.2.1"
failure = "0.1.5"
flate2 = "1.0.9"
log = "0.4.6"
mime_guess = "2.0.0-alpha.6"
serde = "1.0.94"
serde_json = "1.0.40"
tar = "0.4.26"
tokio = "0.1.22"
warp = "0.1.16"

futures-timer = "0.2.1"

[dependencies.futures]
version = "0.1.28"

[dependencies.futures3]
package = "futures-preview"
version = "0.3.0-alpha.17"
features = ["async-await", "nightly", "compat"]

[dependencies.protocol]
package = "rillrate-protocol"
path = "protocol"

[build-dependencies]
failure = "0.1.5"
