[package]
name = "facade"
version = "0.2.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/yewstack/facade"
homepage = "https://github.com/yewstack/facade"
documentation = "https://docs.rs/facade/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "A framework to rapidly add UI to any Rust app"

[dependencies]
config = "0.9.3"
headers = "0.2.1"
failure = "0.1.5"
flate2 = "1.0.9"
log = "0.4.6"
mime_guess = "2.0.0-alpha.6"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
tar = "0.4.26"
tokio = "0.1.22"
warp = "0.1.16"

[dependencies.futures-legacy]
package = "futures"
version = "0.1.28"

[dependencies.futures]
package = "futures-preview"
version = "0.3.0-alpha.18"
features = ["async-await", "nightly", "compat"]

[dependencies.protocol]
package = "facade-protocol"
version = "0.1.0"
path = "protocol"

[build-dependencies]
failure = "0.1.5"

[dev-dependencies]
env_logger = "0.6.2"
runtime = "0.3.0-alpha.7"
runtime-tokio = "0.3.0-alpha.6"
tokio-signal = "0.2.7"

[features]
default = []
refresh = []
