[package]
name = "facade-protocol"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/DenisKolodin/facade"
homepage = "https://github.com/DenisKolodin/facade"
documentation = "https://docs.rs/facade/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "Universal UI interaction protocol of the Facade framework"

[dependencies]
bigdecimal = { version = "0.1.0", features = ["serde"] }
serde = "1.0.94"
serde_derive = "1.0.94"
