[package]
name = "rillrate-ui"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
log = "0.4.6"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
yew = { git = "https://github.com/DenisKolodin/yew" }

[dependencies.protocol]
package = "rillrate-protocol"
path = "../protocol"
