[package]
name = "facade-ui"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/yewstack/facade"
homepage = "https://github.com/yewstack/facade"
documentation = "https://docs.rs/facade/"
license = "MIT/Apache-2.0"

[dependencies]
failure = "0.1.5"
lazy_static = "1.3.0"
log = "0.4.6"
#phf = { version = "0.7.24", features = ["macros"] }
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
web_logger = "0.1.0"
yew = { git = "https://github.com/yewstack/yew" }

[dependencies.protocol]
package = "facade-protocol"
version = "0.1.0"
path = "../protocol"

[build-dependencies]
failure = "0.1.5"
sass-rs = "0.2.2"
